--- a/css/style-blue.css
+++ b/css/style-blue.css
@@ -897,7 +897,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #counter {
-	/* background: url(../images/counter-bg.jpg) no-repeat center; */
+	background: url(../images/counter-bg.jpg) no-repeat center;
 	background-size: cover;
 	padding: 60px 0
 }
